Fixed alignment of projects-view page

--- a/FinalProject/src/main/resources/frontend/finalproject/style.css
+++ b/FinalProject/src/main/resources/frontend/finalproject/style.css
@@ -81,6 +81,7 @@
     -fx-background-color: rgb(18, 122, 214);
     -fx-text-fill: white;
     -fx-border-width: 0px;
+    -fx-pref-width: 150px;
 }
 
 .formBtn:hover
